force-app/main/default/objects/Work_Experience__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Work Experiences</relationshipLabel>
    <relationshipName>Work_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>