force-app/main/default/objects/Work_Experience__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>Work Experience</relationshipLabel>
    <relationshipName>Work_Experience</relationshipName>
    <type>Lookup</type>
</CustomField>