force-app/main/default/objects/Work_Experience__c/fields/RawCostRate__c.field-meta.xml
<CustomField>
    <fullName>RawCostRate__c</fullName>
    <label>Raw Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>