force-app/main/default/objects/Work_Experience__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Experience</relationshipLabel>
    <relationshipName>Work_Experience</relationshipName>
    <type>Lookup</type>
</CustomField>